--- a/x-send-transaction/x-send-transaction.css
+++ b/x-send-transaction/x-send-transaction.css
@@ -19,13 +19,14 @@
     text-align: left;
 }
 
-.x-send-transaction .link-address-book {
-    display: none;
+.x-send-transaction .link-contact-list {
+    /* display: none; */
     float: right;
     /* text-transform: none; */
     font-size: 11px;
     /* font-weight: normal; */
     /* letter-spacing: 0; */
+    cursor: pointer;
 }
 
 .x-send-transaction input[type="number"],
