Use ContactList component, prevent clearing XSendTransactionModal when coming from ContactList

--- a/x-send-transaction/x-send-transaction.css
+++ b/x-send-transaction/x-send-transaction.css
@@ -3,6 +3,7 @@
 @import "../x-amount-input/x-amount-input.css";
 @import "../x-fee-input/x-fee-input.css";
 @import "../x-extra-data-input/x-extra-data-input.css";
+@import "../v-contact-list/v-contact-list-modal.css";
 
 .x-send-transaction {
     width: 600px;
