--- a/x-accounts/x-accounts.css
+++ b/x-accounts/x-accounts.css
@@ -18,8 +18,6 @@ x-accounts-list {
 	flex-grow: 1;
 	overflow-y: auto;
 	overflow-x: hidden;
-	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-	border-top: 1px solid rgba(0, 0, 0, 0.1);
 	flex-direction: column;
 }
 
@@ -36,10 +34,9 @@ x-accounts-list h2 {
 x-account {
     display: flex;
     padding: 8px 0;
-    /* border-bottom: 1px solid rgba(0, 0, 0, 0.1); */
-    /* animation: from-right 500ms; */
     cursor: pointer;
     position: relative;
+    border-radius: 4px;
 }
 
 x-account-modal .x-modal-body {
@@ -58,10 +55,6 @@ x-account:hover {
 
 x-account-modal x-account:hover {
     background-color: transparent;
-}
-
-x-account:last-child {
-    border-bottom: 1px solid transparent;
 }
 
 x-account x-identicon {
