--- a/mixin-modal/x-modal-container.css
+++ b/mixin-modal/x-modal-container.css
@@ -12,7 +12,7 @@ x-modal-container {
     -webkit-overflow-scrolling: touch;
     outline: none !important;
     -webkit-tap-highlight-color: transparent;
-    padding: 24px 0;
+    padding: 24px 0 60px;
 }
 
 x-modal-container > * {
