--- a/x-send-transaction/x-send-transaction.css
+++ b/x-send-transaction/x-send-transaction.css
@@ -3,6 +3,7 @@
 @import "../x-amount-input/x-amount-input.css";
 @import "../x-fee-input/x-fee-input.css";
 @import "../x-extra-data-input/x-extra-data-input.css";
+@import "../v-contact-list/v-contact-list-modal.css";
 
 .x-send-transaction {
     width: 600px;
@@ -19,13 +20,14 @@
     text-align: left;
 }
 
-.x-send-transaction .link-address-book {
-    display: none;
+.x-send-transaction .link-contact-list {
+    /* display: none; */
     float: right;
     /* text-transform: none; */
     font-size: 11px;
     /* font-weight: normal; */
     /* letter-spacing: 0; */
+    cursor: pointer;
 }
 
 .x-send-transaction input[type="number"],
