Enable payouts of vesting contracts

--- a/x-accounts/x-accounts-dropdown.css
+++ b/x-accounts/x-accounts-dropdown.css
@@ -7,12 +7,15 @@ x-accounts-dropdown {
     height: 88px;
 }
 
-x-accounts-dropdown x-expandable:not([disabled]) [status-message],
-x-accounts-dropdown x-expandable[disabled] x-account {
+x-accounts-dropdown x-expandable:not([disabled]) [status-message] {
     display: none;
 }
 
-x-accounts-dropdown [status-message] {
+x-accounts-dropdown x-expandable[disabled] x-account {
+    opacity: 0.7;
+}
+
+x-accounts-dropdown [status-message]:not(:empty) {
     margin: 20px !important;
 }
 
