education-slides: max-width:

--- a/x-education-slides/x-education-slides.css
+++ b/x-education-slides/x-education-slides.css
@@ -1,7 +1,7 @@
 @import "../mixin-modal/mixin-modal.css";
 
 .x-education-slide {
-    max-width: 800px;
+    max-width: 1000px !important;
 }
 
 .x-education-slide .has-side-image {
