--- a/browser-warning/browser-warning.css
+++ b/browser-warning/browser-warning.css
@@ -1,7 +1,3 @@
-noscript {
-    font-size: 32px;
-}
-
 body[browser-outdated],
 body[browser-edge],
 body[no-local-storage],
@@ -12,7 +8,6 @@ body[private-mode] {
     background-image: linear-gradient(30deg, #3023AE, #9C58CB);
     height: 100vh;
     max-height: 100%;
-    font-size: 32px;
 }
 
 body[browser-outdated] > *,
@@ -20,6 +15,14 @@ body[browser-edge] > *,
 body[no-local-storage] > *,
 body[private-mode] > * {
     display: none !important;
+}
+
+body::after {
+    padding: 32px;
+    text-align: center;
+    font-size: 32px;
+    max-width: 600px;
+    color: white;
 }
 
 body[browser-outdated]::after {
