Adapt v-wallet-selector to updated @nimiq/vue-components

--- a/v-wallet-selector/v-wallet-selector.css
+++ b/v-wallet-selector/v-wallet-selector.css
@@ -25,7 +25,7 @@ v-wallet-selector #vue-wallet-menu {
     text-align: left;
 }
 
-v-wallet-selector .login-menu {
+v-wallet-selector .wallet-menu {
     border-top-right-radius: 0 !important;
 }
 
