--- a/x-amount/x-amount.css
+++ b/x-amount/x-amount.css
@@ -72,6 +72,10 @@ x-amount[display] label {
     font-size: 0.5em;
 }
 
+x-amount[display] label {
+    opacity: 0.7;
+}
+
 @media (max-width: 480px) {
     x-amount .rest-decimals {
         display: none;
