--- a/v-wallet-selector/v-wallet-selector.css
+++ b/v-wallet-selector/v-wallet-selector.css
@@ -1,10 +1,16 @@
 v-wallet-selector {
-    position: relative;
     display: inline-block;
+    height: fit-content;
 }
 
-v-wallet-selector [active-wallet-label],
-v-wallet-selector [active-wallet-label-mobile] {
+
+@media (min-width: 621px) {
+    v-wallet-selector {
+        position: relative;
+    }
+}
+
+v-wallet-selector [active-wallet-label] {
     padding: 14px;
     margin-top: -14px;
     margin-left: 10px;
@@ -18,24 +24,17 @@ v-wallet-selector [active-wallet-label-mobile] {
     line-height: 20px;
 }
 
-v-wallet-selector [active-wallet-label]:hover,
-v-wallet-selector [active-wallet-label-mobile]:hover {
+v-wallet-selector [active-wallet-label]:hover {
     opacity: 1;
 }
 
-v-wallet-selector [active-wallet-label-mobile] {
-    display: none;
-}
-
-v-wallet-selector.menu-active [active-wallet-label],
-v-wallet-selector.menu-active [active-wallet-label-mobile] {
+v-wallet-selector.menu-active [active-wallet-label] {
     background: white;
     color: var(--nimiq-blue);
     opacity: 1;
 }
 
-v-wallet-selector [active-wallet-label]::after,
-v-wallet-selector [active-wallet-label-mobile]::after {
+v-wallet-selector [active-wallet-label]::after {
     content: '';
     margin-left: 9px;
     width: 14px;
@@ -48,18 +47,29 @@ v-wallet-selector [active-wallet-label-mobile]::after {
     background-image: url('data:image/svg+xml,<svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg"><mask id="path-1-inside-1" fill="white"><path fill-rule="evenodd" clip-rule="evenodd" d="M7.10417 12.7904C6.84277 13.0518 6.41895 13.0518 6.15755 12.7904L0.657029 7.28984C0.395625 7.02844 0.395625 6.60462 0.657029 6.34322C0.918433 6.08181 1.34225 6.08181 1.60366 6.34322L6.27731 11.0169C6.47257 11.2121 6.78915 11.2121 6.98441 11.0169L11.6581 6.34321C11.9195 6.08181 12.3433 6.08181 12.6047 6.34321C12.8661 6.60462 12.8661 7.02844 12.6047 7.28984L7.10417 12.7904Z"/></mask><path fill-rule="evenodd" clip-rule="evenodd" d="M7.10417 12.7904C6.84277 13.0518 6.41895 13.0518 6.15755 12.7904L0.657029 7.28984C0.395625 7.02844 0.395625 6.60462 0.657029 6.34322C0.918433 6.08181 1.34225 6.08181 1.60366 6.34322L6.27731 11.0169C6.47257 11.2121 6.78915 11.2121 6.98441 11.0169L11.6581 6.34321C11.9195 6.08181 12.3433 6.08181 12.6047 6.34321C12.8661 6.60462 12.8661 7.02844 12.6047 7.28984L7.10417 12.7904Z" fill="white"/><path d="M4.74333 14.2046C5.78578 15.247 7.47593 15.247 8.51839 14.2046L5.68996 11.3761C6.2096 10.8565 7.05211 10.8565 7.57176 11.3761L4.74333 14.2046ZM-0.757184 8.70406L4.74333 14.2046L7.57176 11.3761L2.07124 5.87563L-0.757184 8.70406ZM-0.757185 4.929C-1.79964 5.97145 -1.79964 7.6616 -0.757184 8.70406L2.07124 5.87563C2.59089 6.39527 2.59089 7.23778 2.07124 7.75743L-0.757185 4.929ZM3.01787 4.929C1.97542 3.88655 0.285267 3.88655 -0.757185 4.929L2.07124 7.75743C1.5516 8.27707 0.709087 8.27707 0.189442 7.75743L3.01787 4.929ZM7.69152 9.60265L3.01787 4.929L0.189442 7.75743L4.86309 12.4311L7.69152 9.60265ZM10.2438 4.929L5.5702 9.60265L8.39863 12.4311L13.0723 7.75743L10.2438 4.929ZM14.0189 4.929C12.9764 3.88655 11.2863 3.88655 10.2438 4.929L13.0723 7.75743C12.5526 8.27707 11.7101 8.27707 11.1905 7.75743L14.0189 4.929ZM14.0189 8.70406C15.0614 7.6616 15.0614 5.97145 14.0189 4.929L11.1905 7.75743C10.6708 7.23778 10.6708 6.39527 11.1905 5.87563L14.0189 8.70406ZM8.51839 14.2046L14.0189 8.70406L11.1905 5.87563L5.68996 11.3761L8.51839 14.2046ZM4.86309 12.4311C5.8394 13.4074 7.42231 13.4074 8.39863 12.4311L5.5702 9.60265C6.15599 9.01686 7.10573 9.01687 7.69152 9.60265L4.86309 12.4311Z" fill="white" mask="url(#path-1-inside-1)"/></svg>');
 }
 
-v-wallet-selector.menu-active [active-wallet-label]::after,
-v-wallet-selector.menu-active [active-wallet-label-mobile]::after {
+v-wallet-selector.menu-active [active-wallet-label]::after {
     filter: brightness(0.12) sepia(1) hue-rotate(180deg) saturate(5);
 }
 
-v-wallet-selector #vue-wallet-menu {
+v-wallet-selector .v-wallet-menu {
     position: absolute;
-    top: 4.25rem;
-    right: 0;
     z-index: 1000;
     color: var(--nimiq-blue);
     text-align: left;
+}
+
+v-wallet-selector #vue-wallet-menu-desktop {
+    top: 4.25rem;
+    right: 0;
+}
+
+v-wallet-selector #vue-wallet-menu-mobile {
+    left: 0;
+}
+
+v-wallet-selector #vue-wallet-menu-mobile .wallet-menu {
+    width: 100vw;
+    max-width: unset;
 }
 
 v-wallet-selector .wallet-menu {
@@ -73,14 +83,4 @@ v-wallet-selector button {
     min-height: unset;
     margin: 0;
     text-transform: unset;
-}
-
-@media (max-width: 620px) {
-    v-wallet-selector [active-wallet-label] {
-        display: none;
-    }
-
-    v-wallet-selector [active-wallet-label-mobile] {
-        display: block;
-    }
 }
