--- a/x-transactions/x-transactions.css
+++ b/x-transactions/x-transactions.css
@@ -94,9 +94,9 @@ x-transaction.expired .timestamp {
     font-weight: bold;
 }
 
-x-transaction x-identicon {
+x-transaction .identicon {
     width: 66px;
-    height: 50px;
+    height: 75px;
     padding: 0 8px;
 }
 
