Add missing styles from @nimiq/styles to VWalletSelector

--- a/v-wallet-selector/v-wallet-selector.css
+++ b/v-wallet-selector/v-wallet-selector.css
@@ -69,3 +69,98 @@ v-wallet-selector button {
     margin: 0;
     text-transform: unset;
 }
+
+/** Some styles required from @nimiq/style, as not included in VueComponents **/
+
+.nq-label {
+    font-size: 1.75rem;
+    line-height: 0.857;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 0.107em;
+    margin: 1rem 0;
+    color: rgb(31, 35, 72, 0.7); /* Based on Nimiq Blue */
+}
+
+.nq-button-s {
+    display: inline-block;
+    font-size: 1.75rem;
+    line-height: 2rem;
+    height: 3.375rem;
+    text-decoration: none;
+    font-weight: bold;
+    letter-spacing: 0.014em;
+    padding: 0 1.5rem;
+    background-color: rgba(31, 35, 72, 0.07); /* Based on Nimiq Blue */
+    color: var(--nimiq-blue);
+    border-radius: 1.6875rem;
+    transition: color 300ms ease, background-color 300ms ease;
+    will-change: color, background-color;
+    border: none;
+    cursor: pointer;
+    position: relative;
+    font-family: inherit;
+}
+
+.nq-button-s[disabled] {
+    opacity: 0.4;
+    cursor: not-allowed;
+}
+
+.nq-button-s::after {
+    content: '';
+    display: block;
+    position: absolute;
+    left: -1.5rem;
+    top: -1.5rem;
+    right: -1.5rem;
+    bottom: -1.5rem;
+}
+
+.nq-button-s:hover {
+    background-color: rgba(31, 35, 72, 0.12); /* Based on Nimiq Blue */
+}
+
+.nq-button-s[disabled]:hover {
+    background-color: rgba(31, 35, 72, 0.07); /* Based on Nimiq Blue */
+}
+
+.nq-button-s:focus {
+    outline: none;
+    color: var(--nimiq-light-blue);
+    background-color: rgba(5, 130, 202, 0.16); /* Based on Nimiq Light Blue */
+}
+
+/* Color variations */
+
+/* light blue */
+.nq-button-s.light-blue {
+    color: var(--nimiq-light-blue);
+    background-color: rgba(5, 130, 202, 0.1); /* Based on Nimiq Light Blue */
+}
+
+.nq-button-s.light-blue:hover,
+.nq-button-s.light-blue:active,
+.nq-button-s.light-blue:focus {
+    background-color: rgba(5, 130, 202, 0.16); /* Based on Nimiq Light Blue */
+}
+
+.nq-button-s.light-blue[disabled]:hover {
+    background-color: rgba(5, 130, 202, 0.1); /* Based on Nimiq Light Blue */
+}
+
+/* red */
+.nq-button-s.red {
+    color: var(--nimiq-red);
+    background-color: rgba(216, 65, 51, 0.1); /* Based on Nimiq Red */
+}
+
+.nq-button-s.red:hover,
+.nq-button-s.red:active,
+.nq-button-s.red:focus {
+    background-color: rgba(216, 65, 51, 0.16); /* Based on Nimiq Red */
+}
+
+.nq-button-s.red[disabled]:hover {
+    background-color: rgba(216, 65, 51, 0.1); /* Based on Nimiq Red */
+}
