--- a/x-transactions/x-transactions.css
+++ b/x-transactions/x-transactions.css
@@ -165,7 +165,6 @@ x-transactions-list x-no-transactions {
 	display: block;
 	padding: 1.5em;
 	text-align: center;
-	opacity: 0.6;
 }
 
 x-transactions-list x-no-transactions h1.material-icons {
@@ -173,6 +172,11 @@ x-transactions-list x-no-transactions h1.material-icons {
     font-size: 80px;
     opacity: 0.3;
     margin-bottom: 0.1em;
+}
+
+x-transactions-list x-no-transactions .material-icons,
+x-transactions-list x-no-transactions span {
+    opacity: 0.6;
 }
 
 x-paginator {
