--- a/v-wallet-selector/v-wallet-selector.css
+++ b/v-wallet-selector/v-wallet-selector.css
@@ -63,23 +63,38 @@ v-wallet-selector .wallet-menu {
 }
 
 v-wallet-selector button {
-    box-shadow: none;
+    box-shadow: unset;
     width: unset;
     min-height: unset;
-    margin: 0;
+    margin: unset;
     text-transform: unset;
+    font-size: unset;
+    font-weight: unset;
+    letter-spacing: unset;
+    height: unset;
+    max-width: unset;
+    vertical-align: unset;
+    user-select: unset;
+    outline: unset;
+    line-height: unset;
+    border-radius: unset;
+    display: unset;
 }
 
 /** Some styles required from @nimiq/style, as not included in VueComponents **/
 
-.nq-label {
-    font-size: 1.75rem;
-    line-height: 0.857;
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: 0.107em;
-    margin: 1rem 0;
-    color: rgb(31, 35, 72, 0.7); /* Based on Nimiq Blue */
+.nq-orange {
+    color: var(--nimiq-orange) !important;
+}
+
+.nq-blue-bg {
+    background: var(--nimiq-blue);
+    background-image: var(--nimiq-blue-bg);
+}
+
+.nq-icon {
+    width: 1em;
+    height: 1em;
 }
 
 .nq-button-s {
@@ -102,11 +117,6 @@ v-wallet-selector button {
     font-family: inherit;
 }
 
-.nq-button-s[disabled] {
-    opacity: 0.4;
-    cursor: not-allowed;
-}
-
 .nq-button-s::after {
     content: '';
     display: block;
@@ -117,50 +127,12 @@ v-wallet-selector button {
     bottom: -1.5rem;
 }
 
-.nq-button-s:hover {
+.nq-button-s.add-account:hover {
     background-color: rgba(31, 35, 72, 0.12); /* Based on Nimiq Blue */
 }
 
-.nq-button-s[disabled]:hover {
-    background-color: rgba(31, 35, 72, 0.07); /* Based on Nimiq Blue */
-}
-
-.nq-button-s:focus {
+.nq-button-s.add-account:focus {
     outline: none;
     color: var(--nimiq-light-blue);
     background-color: rgba(5, 130, 202, 0.16); /* Based on Nimiq Light Blue */
-}
-
-/* Color variations */
-
-/* light blue */
-.nq-button-s.light-blue {
-    color: var(--nimiq-light-blue);
-    background-color: rgba(5, 130, 202, 0.1); /* Based on Nimiq Light Blue */
-}
-
-.nq-button-s.light-blue:hover,
-.nq-button-s.light-blue:active,
-.nq-button-s.light-blue:focus {
-    background-color: rgba(5, 130, 202, 0.16); /* Based on Nimiq Light Blue */
-}
-
-.nq-button-s.light-blue[disabled]:hover {
-    background-color: rgba(5, 130, 202, 0.1); /* Based on Nimiq Light Blue */
-}
-
-/* red */
-.nq-button-s.red {
-    color: var(--nimiq-red);
-    background-color: rgba(216, 65, 51, 0.1); /* Based on Nimiq Red */
-}
-
-.nq-button-s.red:hover,
-.nq-button-s.red:active,
-.nq-button-s.red:focus {
-    background-color: rgba(216, 65, 51, 0.16); /* Based on Nimiq Red */
-}
-
-.nq-button-s.red[disabled]:hover {
-    background-color: rgba(216, 65, 51, 0.1); /* Based on Nimiq Red */
 }
