replace sender by signer in offline tx modal; reset tx modal only after sending; wording: loading => sending; disable dropdown with 1 account, change disabled dropdown style

--- a/x-expandable/x-expandable.css
+++ b/x-expandable/x-expandable.css
@@ -38,6 +38,11 @@ x-expandable [expandable-trigger] {
     }
 }
 
+x-expandable[disabled] {
+    pointer-events: none;
+    box-shadow: none;
+}
+
 x-expandable[disabled] [expandable-trigger] {
     padding-right: 0;
 }
